<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.ScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <Button
                android:id="@+id/prev_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_month"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/month_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                tools:text="November 2025" />

            <Button
                android:id="@+id/next_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_month"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7"
            tools:listitem="@layout/list_item_calendar_day"/>

        <TextView
            android:id="@+id/list_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_schedules_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:padding="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            tools:listitem="@layout/list_item_schedule" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeline_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:listitem="@layout/list_item_timeline_event" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_schedule"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
